...
  /// Delete ... AppBar menu item.
  void _deleteFileName(String selectedFileNameStr, [BuildContext? context]) {
    if (context == null) {
      return;
    }

    String okButtonStr = 'Ok';
    Widget cancelButton = TextButton(
      child: const Text("Cancel"),
      onPressed: () => Navigator.pop(context, 'Cancel'),
    );
    Widget okButton = TextButton(
      child: Text(okButtonStr),
...
          width: 36,
          height: 36,
        ),
      ),
      KeyedSubtree(
        // enables adding a key to the image useful for integration testing
        key: const ValueKey('navBarWakeUpDurationPageTwo'),
        child: Image.asset(
          "images/time_difference_blue_trans.png",
          width: 35,
          height: 35,
        ),
      ),
...
              ),
            ),
            elevation: 0,
            centerTitle: true,
            actions: [
              PopupMenuButton(
                key: const Key('appBarPopupMenuButton'),
                shape: const RoundedRectangleBorder(
                  borderRadius: BorderRadius.all(
                    Radius.circular(ScreenMixin.APP_ROUNDED_BOARDER_RADIUS),
                  ),
                ),
                // add icon, by default "3 dot" icon
...
                  if (saveAsFileName == '') {
                    saveAsFileName = kDefaultJsonFileName;
                  }

                  return [
                    const PopupMenuItem<int>(
                      key: Key('appBarMenuUndo'),
                      value: 0,
                      child: Text("Undo"),
                    ),
                    PopupMenuItem<int>(
                      key: const Key('appBarMenuSaveAs'),
                      value: 1,
                      child: Text("Save as $saveAsFileName"),
                    ),
                    const PopupMenuItem<int>(
                      key: Key('appBarMenuLoad'),
                      value: 2,
                      child: Text("Load ..."),
                    ),
                    const PopupMenuItem<int>(
                      key: Key('appBarMenuUploadToCloud'),
                      value: 3,
...
