...

    setState(() {});

    _updateTransferDataMap();
  }

  /// Private method called when clicking on 'Add' button located at right of
  /// new date time TextField.
  Future<void> _handleAddNewDateTimeButton(BuildContext context) async {
    DateTime? newDateTime;

    _newFrenchFormatDateTimeStr = _newDateTimeController.text;
    newDateTime =
...
                          selectionColor: selectionColor,
                          cursorColor: ScreenMixin.APP_TEXT_AND_ICON_COLOR,
                        ),
                      ),
                      child: GestureDetector(
                        child: TextField(
                          key: const Key('newDateTimeTextField'),
                          decoration:
                              const InputDecoration.collapsed(hintText: ''),
                          style: valueTextStyle,
                          // prevents displaying copy paste menu !
                          contextMenuBuilder: null,
                          keyboardType: TextInputType.datetime,
                          controller: _newDateTimeController, // links the
                          //                         TextField content to pressing
                          //                         the button 'Now'. '+' or '-'
                          focusNode: _newDateTimeFocusNode,
                        ),
                        onTap: () {
                          _newDateTimeFocusNode.requestFocus();
                        },
                        onDoubleTap: () async {
...
