...
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  const SizedBox(
                    height: 15,
                  ),
                  EditableDateTime(
                    key: const Key('wakeUpDurationStartDateTimeKey'),
                    dateTimeTitle: 'Start date time',
                    dateTimePickerController: _startDateTimeController,
                    handleDateTimeModificationFunction: _setStateDiffDuration,
                    transferDataMap: _transferDataMap,
                    handleSelectedDateTimeStrFunction:
                        _handleSelectedStartDateTimeStr,
...
